--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@types/classnames": "^2.2.11",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -20,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9001"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/react": "^6.1.11",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.19",
+    "babel-loader": "^8.1.0",
+    "node-sass": "^4.14.1"
   }
 }
